--- a/boxes.html
+++ b/boxes.html
@@ -12,8 +12,10 @@
        elements are not. They are <strong>inline</strong> elements.</p>
 
     <div style='padding-top: 1px'></div> <!-- Add this -->
-    
+
     <p>Block elements define the flow of the HTML document, while inline elements
        do not.</p>
+
+    <div>Button</div>
   </body>
 </html>
